--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "author": "Thulani Zondo",
   "license": "ISC",
   "dependencies": {
+    "connect-mongodb-session": "^2.0.2",
     "cookie-parser": "^1.4.3",
     "ejs": "latest",
     "express": "^4.16.3",
-    "express-session": "^1.0.6",
-    "mongoose": "^5.0.15",
+    "express-session": "^1.15.6",
+    "mongodb": "^3.1.0-beta4",
+    "mongoose": "^5.1.1",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.4",
     "npm": "^5.8.0"
