--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Thulani Zondo",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "connect-mongodb-session": "^2.0.2",
     "cookie-parser": "^1.4.3",
     "ejs": "latest",
