--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.1.1",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.4",
-    "npm": "^5.8.0"
+    "npm": "^5.8.0",
+    "yarn-install": "^1.0.0"
   }
 }
